Improved layout, fix force close when file can not be opened.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="contact_empty_list">Nenhum contato carregado</string>
     <string name="warning_enable_accessibility">O serviço de acessibilidade do GDG precisa ser ativado</string>
     <string name="snack_enable_service">Configurar</string>
-    <string name="hint_edit_message">Digite a mensagem aqui...</string>
+    <string name="hint_edit_message">Mensagem...</string>
     <string name="label_for_open_file_button">Arquivo de contatos</string>
+    <string name="snack_file_not_found_exception">Arquivo não encontrado!</string>
 </resources>
