--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="hint_edit_message">Mensagem...</string>
     <string name="label_for_open_file_button">Arquivo de contatos</string>
     <string name="snack_file_not_found_exception">Arquivo não encontrado!</string>
+    <string name="contact_list_header_name">NOME</string>
+    <string name="contact_list_header_phone">NÚMERO</string>
 </resources>
